# Changelog

## 0.1.0

* Initial release with one simple issues listing.