@@ -107,6 +107,8 @@ SprinterDash.prototype.attach = function(app, urlPrefixIn) {
     var urlPrefix = resolveUrlPrefix(urlPrefixIn)
       , htmlRoute = urlPrefix + 'issues'
       , dataRoute = urlPrefix + '_issues'
+      , oldIssuesRoute = urlPrefix + '_oldIssues'
+      , staleIssuesRoute = urlPrefix + '_staleIssues'
       , staticUrl = urlPrefix + staticDir;
 
     // console.log('urlPrefix: %s\nroute: %s\nstatic: %s', urlPrefix, route, staticUrl);
@@ -120,6 +122,8 @@ SprinterDash.prototype.attach = function(app, urlPrefixIn) {
     app.get(urlPrefix, this.showDash());
     app.get(htmlRoute, this.showIssues());
     app.get(dataRoute, this._showIssues());
+    app.get(oldIssuesRoute, this._showIssues());
+    app.get(staleIssuesRoute, this._showIssues());
     // console.log(path.join(__dirname, '../client'));
     app.use(staticUrl, express.static(path.join(__dirname, '..', staticDir)));
 
